--- a/part01.ipynb
+++ b/part01.ipynb
@@ -4,12 +4,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Przykład jak prosto i elegancko będzie się nam pracowało "
+    "## 1. Początek\n",
+    "---------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Python is a programming language that lets you work quickly\n",
+    "> and integrate systems more effectively"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import this"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Przykład jak prosto i elegancko będzie się nam pracowało "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -27,17 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 1, 2, 3, 6, 8, 10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(quicksort([3,6,8,10,1,2,1]))"
    ]
@@ -51,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -74,17 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "512\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(gcd(1024, 512))"
    ]
@@ -98,17 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "512\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import gcd as gcd_\n",
     "print(gcd_(1024,512))"
@@ -122,8 +151,159 @@
     "    w Pythone 2.7 zrobilibyśmy to tak:\n",
     "    `\n",
     "    >>> from fractions import gcd\n",
-    "    >>> gcd(20,8)\n",
+    "    >>> print gcd(20,8)\n",
     "    `"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Dlaczego Python 3.6 a nie Python 2.7?\n",
+    "----------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Podstawy\n",
+    "------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. ... o czym?\n",
+    "------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Pewne rzeczy można zrobić lepiej, czyli jak pisać dobrze\n",
+    "-----------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "name = \"Kennedy\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if name == \"John\": \n",
+    "   print(\"This is John, he is an artist\")\n",
+    "elif name == \"Ted\":\n",
+    "   print(\"This is Ted, he is an engineer\")\n",
+    "elif name == \"Kennedy\":\n",
+    "   print(\"This is Kennedy, he is a teacher\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name_job_dict = {\n",
+    "   \"Josh\": \"This is John, he is an artist\",\n",
+    "   \"Ted\": \"This is Ted, he is an engineer\",   \n",
+    "   \"Kennedy\": \"This is Kennedy, he is a teacher\",\n",
+    "}\n",
+    "print(name_job_dict[name])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {'a': 1,\n",
+    "        'b': 2,\n",
+    "        'a': 2\n",
+    "       }\n",
+    "# really verbose\n",
+    "new = {}\n",
+    "for (key, value) in data:\n",
+    "    if key in new:\n",
+    "        new[key].append( value )\n",
+    "    else:\n",
+    "        new[key] = [value]\n",
+    "\n",
+    "\n",
+    "# easy with setdefault\n",
+    "new = {}\n",
+    "for (key, value) in data:\n",
+    "    group = new.setdefault(key, []) # key might exist already\n",
+    "    group.append( value )"
    ]
   },
   {
