--- a/part00.ipynb
+++ b/part00.ipynb
@@ -69,7 +69,7 @@
    "source": [
     "Zalicznie przedmiotu wymaga uzyskania 50% maksymalnej liczby punktów. Oceny wystawiane są według skali\n",
     "\n",
-    "| oczena   | punkty      |\n",
+    "| ocena   | punkty      |\n",
     "|:--------:|:-----------:| \n",
     "| 5.0      | [90%, 100%) |\n",
     "| 4.5      | [80%, 90%)  |\n",
