--- a/part00.ipynb
+++ b/part00.ipynb
@@ -84,6 +84,49 @@
    "source": [
     "Osoby, które zaliczą ćwiczenia, lecz w toku normalnych zajęć nie uzyskają wymaganej liczb punktów, będą pisały egzamin w sesji, w zwykłym terminie (i ewnetualnie egzamin poprawowy w sesji poprawkowej). Z egzaminu nie możn uzyskać oceny wyższej niż 3.0."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Materiały\n",
+    "\n",
+    "Kurs jest oparty m.in. na:\n",
+    "- http://stanfordpython.com\n",
+    "- https://stanford.edu/~schmit/cme193/project.html\n",
+    "- https://github.com/gmum/python-lecture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Podstawowe cele tego przedmiotu są dwa:\n",
+    "\n",
+    "Nauczenia Państwa istotnych elementów języka Python, zarówno podstaw, mechanizmów, jak i praktycznych sztuczek i modułów\n",
+    "\n",
+    "Sprawienie, że będą Państwo [dużo] programować. Nie ma żadnej innej metody nauczenia się języka programowania niż po prostu korzystanie z niego. Ciągłe korzystanie."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tematyka\n",
+    "\n",
+    "- Rozgrzewka\n",
+    "- Data structures\n",
+    "- Functions\n",
+    "- Functional programming\n",
+    "- Object-oriented Python\n",
+    "- Standard library\n",
+    "- Third-party tools\n",
+    "    1.\tPillow, scikit-image – manipulacja  obrazami\n",
+    "    2.\tNumpy, Scipy – obliczenia numeryczne\n",
+    "    3.\tMatplotlib, PyGoogleChart – tworzenie wykresów\n",
+    "    4.\tScikit-learn – metody uczenia maszynowego\n",
+    "    5.\tPandas, h5py – obsługa dużych plików\n"
+   ]
   }
  ],
  "metadata": {
