--- a/part00.ipynb
+++ b/part00.ipynb
@@ -29,35 +29,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ocena końcowa z przedmiotu wystawiana jest na podstawie poniższej listy aktywności\n",
-    "- (60p) **Kolokwia**\n",
+    "#### Kryteria oceny\n",
     "\n",
-    "    Palnowane są dwa kolokwia po 30 punktów każde. Kolokwium ralizowane będzie w sali komputerowej, w terminie wspólnym dla wszystkich uczęszczających na przedmiot.\n",
+    "Ocena końcowa z przedmiotu wystawiana jest na podstawie poniższej listy aktywności\n",
+    "- (60p) **Kolokwia (zadania rozwiązywane samodzielnie na laboratorium)**\n",
+    "\n",
+    "    Planowane są dwa kolokwia po 30 punktów każde. Kolokwium realizowane będzie w sali komputerowej, w terminie wspólnym dla wszystkich uczęszczających na przedmiot.\n",
+    "    \n",
     "    \n",
     "- (30p) **Projekt**\n",
     "    \n",
-    "    Projekt zaliczeniowy powinien być realizacją jednego z tematów, które zostaną przedstawione. Projekty będą jedno- lub dwu-osobowe (oczywiście wtedy będą większe). Nie ma tu możliwości oddania projektu z innego przedmiotu, kluczową cechą tego projektu ma być, by Państwo spędzili po prostu czas z językiem, poznając go lepiej, obcując z nim. To najlepsza droga do jego zrozumienia. Projekt nie ma być celem samym w sobie - to droga do niego jest kluczowa. Oceniane przez wykładowcę.\n",
+    "    Projekt zaliczeniowy będzie dotyczył jednego z tematów, które zostaną przedstawione przez prowadzącego. Projekty będą jedno- lub dwu-osobowe (oczywiście wtedy będą większe). Nie ma tu możliwości oddania projektu z innego przedmiotu, ponieważ celem realizacji projektu jest pogłębienie wiedzy z języka. Projekt będzie oceniany przez wykładowcę, przy czym kryteria i szczegóły oceny zostaną zaprezentowane odpowiednio wcześniej.\n",
+    "    \n",
+    "    Przykład projektu: implementacja gry 2048 wraz z botami.\n",
+    "    \n",
     "\n",
     "- (10p) **Aktywność w czasie laboratoriów**\n",
     "\n",
     "    Aktywne uczestnictwo w laboratoriach [subiektywna ocena ćwiczeniowca], m.in. rozwiązywanie zadań podanych podczas zajęć, udział w nich poprzez zadawanie pytań, prowadzenie merytorycznej dyskusji.\n",
     "    \n",
+    "    \n",
     "- (10p) **Udzielanie się w społeczności**\n",
     "\n",
-    "    Jedną z największych sił pythona jest aktywna społeczność sympatyków/użytkowników. Są dwie podstawowe metody zaangażowania, które gwarantują otrzymanie kompletu punktów za tę część:\n",
+    "    Python to także jego społeczność. Są dwie podstawowe metody zaangażowania, które gwarantują otrzymanie kompletu punktów za tę część:\n",
     "\n",
     "    - aktywne uczestnictwo w sieci stackoverflow.com - oczekuję udzielenia 10 rozsądnych odpowiedzi na pytania z flagą [python] \n",
     "    - zaangażowanie się w dowolny open sourcowy projekt pythonowy na github.com i zgłoszenie dwóch istotnych poprawek [rozwiązań istniejących issues/features requests] Oceniane przez wykładowcę.\n",
     "    \n",
+    "    \n",
     "- (15p) **Aktywność w trakcie wykładu**\n",
     "\n",
-    "    Na wykładzie będą ogłaszane, którkie pytania do rozważania/wyszukania. Prezentacja każdego z takich zagadanień będzie oceniana przez prowadzącego w skali od 0 do 5 punktów. Jedna osoba nie może zaprezentować więcej niż 4 odpowiedzi na takie pytania i nie może zgromadzić więcej niż 15 punktów."
+    "    Na wykładzie będą ogłaszane, którkie pytania do rozważania/wyszukania. Prezentacja każdego z takich zagadanień będzie oceniana przez wykładowcę w skali od 0 do 5 punktów. Jedna osoba nie może zaprezentować więcej niż 4 odpowiedzi na takie pytania i nie może zgromadzić więcej niż 15 punktów. \n",
+    "    \n",
+    "    Przykład: a) jak działa `timeit`; b) jak przejść dwójkami (zachodzącymi na siebie lub nie) po liście\n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### (Nie)Obecności \n",
     "Obecność na laboratoriach jest obowiązkowa. Dopuszcza się trzy nieobcności, bez konieczności usprawiedliwienia. Przekroczenie tego limitu powoduje niezaliczenie przedmiotu, niezależy od liczby zdobytych punktów. \n",
     "\n",
     "Dla osób, które nie będą mogły uczestniczy, w którym kolwiek kolokwium organizowane jest dodatkowe kolokwium w terminie sesji z zagadnień zwiazanych z całym materiałem przerobionym na laboratoriach."
@@ -67,7 +79,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Zalicznie przedmiotu wymaga uzyskania 50% maksymalnej liczby punktów. Oceny wystawiane są według skali\n",
+    "#### Stopnie\n",
+    "\n",
+    "Zaliczenie przedmiotu wymaga uzyskania 50% maksymalnej liczby punktów. Oceny wystawiane są według skali\n",
     "\n",
     "| ocena   | punkty      |\n",
     "|:--------:|:-----------:| \n",
@@ -82,7 +96,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Osoby, które zaliczą ćwiczenia, lecz w toku normalnych zajęć nie uzyskają wymaganej liczb punktów, będą pisały egzamin w sesji, w zwykłym terminie (i ewnetualnie egzamin poprawowy w sesji poprawkowej). Z egzaminu nie możn uzyskać oceny wyższej niż 3.0."
+    "Osoby, które zaliczą ćwiczenia, lecz w toku normalnych zajęć nie uzyskają wymaganej liczb punktów, będą pisały egzamin w sesji, w zwykłym terminie (i ewnetualnie egzamin poprawowy w sesji poprawkowej). Z egzaminu nie można uzyskać oceny wyższej niż 3.0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Uwagi:\n",
+    "1. Nie jest możliwe przepisywanie oceny na podstawie zajęć zrealizowanych na I stopniu studiów.\n",
+    "2. ..."
    ]
   },
   {
@@ -103,9 +126,10 @@
    "source": [
     "## Podstawowe cele tego przedmiotu są dwa:\n",
     "\n",
-    "Nauczenia Państwa istotnych elementów języka Python, zarówno podstaw, mechanizmów, jak i praktycznych sztuczek i modułów\n",
-    "\n",
-    "Sprawienie, że będą Państwo [dużo] programować. Nie ma żadnej innej metody nauczenia się języka programowania niż po prostu korzystanie z niego. Ciągłe korzystanie."
+    "1. Develop skills with Python fundamentals, both old and new\n",
+    "2. Learn to recognize and write \"good\" Python\n",
+    "3. Gain experience with practical Python tasks\n",
+    "4. Understand when to choose Python (or not)"
    ]
   },
   {
@@ -127,6 +151,15 @@
     "    4.\tScikit-learn – metody uczenia maszynowego\n",
     "    5.\tPandas, h5py – obsługa dużych plików\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
