--- a/part00.ipynb
+++ b/part00.ipynb
@@ -54,7 +54,7 @@
     "    Python to także jego społeczność. Są dwie podstawowe metody zaangażowania, które gwarantują otrzymanie kompletu punktów za tę część:\n",
     "\n",
     "    - aktywne uczestnictwo w sieci stackoverflow.com - oczekuję udzielenia 10 rozsądnych odpowiedzi na pytania z flagą [python] \n",
-    "    - zaangażowanie się w dowolny open sourcowy projekt pythonowy na github.com i zgłoszenie dwóch istotnych poprawek [rozwiązań istniejących issues/features requests] Oceniane przez wykładowcę.\n",
+    "    - zaangażowanie się w dowolny open sourcowy projekt pythonowy na github.com i zgłoszenie dwóch istotnych poprawek [rozwiązań istniejących issues/features requests] oceniane przez wykładowcę.\n",
     "    \n",
     "    \n",
     "- (15p) **Aktywność w trakcie wykładu**\n",
