--- a/part00.ipynb
+++ b/part00.ipynb
@@ -2,24 +2,37 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Efektywne programowanie w języku Python"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Prowadzący\n",
-    "- dr Krzysztof Misztal, krzysztof.misztal@uj.edu.pl, pokój 2164, dyżur: ...\n",
-    "- mgr Krzysztof Hajto, ..."
+    "- dr Krzysztof Misztal, krzysztof.misztal@uj.edu.pl, pokój 2164, dyżur: środa 14.00-16.00, [http://misztal.edu.pl](http://misztal.edu.pl)\n",
+    "- dr Przemysław Spurek, przemyslaw.spurek@uj.edu.pl\n",
+    "- mgr Igor Sieradzki, igor.sieradzki@doctoral.uj.edu.pl\n",
+    "- mgr Krzysztof Hajto, krzysztof.hajto@doctoral.uj.edu.pl"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "source": [
     "## Sprawy organizacyjne"
@@ -27,59 +40,135 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Kryteria oceny\n",
     "\n",
-    "Ocena końcowa z przedmiotu wystawiana jest na podstawie poniższej listy aktywności\n",
-    "- (60p) **Kolokwia (zadania rozwiązywane samodzielnie na laboratorium)**\n",
+    "Ocena końcowa z przedmiotu wystawiana jest na podstawie poniższej listy aktywności"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- (50p) **Kolokwia (zadania rozwiązywane samodzielnie na laboratorium)**\n",
     "\n",
-    "    Planowane są dwa kolokwia po 30 punktów każde. Kolokwium realizowane będzie w sali komputerowej, w terminie wspólnym dla wszystkich uczęszczających na przedmiot.\n",
+    "    Planowane są dwa kolokwia po 25 punktów każde. \n",
+    "    Terminy:\n",
+    "    - 08.11.2017\n",
+    "    - 10.11.2017\n",
     "    \n",
-    "    \n",
-    "- (30p) **Projekt**\n",
-    "    \n",
-    "    Projekt zaliczeniowy będzie dotyczył jednego z tematów, które zostaną przedstawione przez prowadzącego. Projekty będą jedno- lub dwu-osobowe (oczywiście wtedy będą większe). Nie ma tu możliwości oddania projektu z innego przedmiotu, ponieważ celem realizacji projektu jest pogłębienie wiedzy z języka. Projekt będzie oceniany przez wykładowcę, przy czym kryteria i szczegóły oceny zostaną zaprezentowane odpowiednio wcześniej.\n",
-    "    \n",
-    "    Przykład projektu: implementacja gry 2048 wraz z botami.\n",
-    "    \n",
-    "\n",
-    "- (10p) **Aktywność w czasie laboratoriów**\n",
-    "\n",
-    "    Aktywne uczestnictwo w laboratoriach [subiektywna ocena ćwiczeniowca], m.in. rozwiązywanie zadań podanych podczas zajęć, udział w nich poprzez zadawanie pytań, prowadzenie merytorycznej dyskusji.\n",
-    "    \n",
-    "    \n",
-    "- (10p) **Udzielanie się w społeczności**\n",
-    "\n",
-    "    Python to także jego społeczność. Są dwie podstawowe metody zaangażowania, które gwarantują otrzymanie kompletu punktów za tę część:\n",
-    "\n",
-    "    - aktywne uczestnictwo w sieci stackoverflow.com - oczekuję udzielenia 10 rozsądnych odpowiedzi na pytania z flagą [python] \n",
-    "    - zaangażowanie się w dowolny open sourcowy projekt pythonowy na github.com i zgłoszenie dwóch istotnych poprawek [rozwiązań istniejących issues/features requests] oceniane przez wykładowcę.\n",
-    "    \n",
-    "    \n",
-    "- (15p) **Aktywność w trakcie wykładu**\n",
-    "\n",
-    "    Na wykładzie będą ogłaszane, którkie pytania do rozważania/wyszukania. Prezentacja każdego z takich zagadanień będzie oceniana przez wykładowcę w skali od 0 do 5 punktów. Jedna osoba nie może zaprezentować więcej niż 4 odpowiedzi na takie pytania i nie może zgromadzić więcej niż 15 punktów. \n",
-    "    \n",
-    "    Przykład: a) jak działa `timeit`; b) jak przejść dwójkami (zachodzącymi na siebie lub nie) po liście\n",
+    "    Kolokwia należy zaliczyć, tzn. uzyskać co najmiej 10 punktów na 25 punktów z każdego, i nie mniej niż 25 punktów z obu - **w przeciwnym przypadku osoba pisze egzamin**.\n",
     "    "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- (35p) **Projekt**\n",
+    "    \n",
+    "    Projekt zaliczeniowy będzie dotyczył jednego z tematów, które zostaną przedstawione przez prowadzącego. Projekty będą jedno- lub dwu-osobowe (oczywiście wtedy będą większe). Nie ma tu możliwości oddania projektu z innego przedmiotu, ponieważ celem realizacji projektu jest pogłębienie wiedzy z języka. Projekt będzie oceniany przez wykładowcę i prowadzacych, przy czym kryteria i szczegóły oceny zostaną zaprezentowane odpowiednio wcześniej.\n",
+    "    \n",
+    "    Przykład projektu: implementacja gry 2048 wraz z botami."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- (15p) **Aktywność w czasie laboratoriów**\n",
+    "\n",
+    "    Aktywne uczestnictwo w laboratoriach [subiektywna ocena ćwiczeniowca], m.in. rozwiązywanie zadań podanych podczas zajęć, udział w nich poprzez zadawanie pytań, prowadzenie merytorycznej dyskusji."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- (15p) **Aktywność w trakcie wykładu**\n",
+    "\n",
+    "    Na wykładzie będą ogłaszane, krótkie pytania do rozważania/wyszukania. Prezentacja każdego z takich zagadanień będzie oceniana przez wykładowcę w skali od 0 do 5 punktów. Jedna osoba nie może zaprezentować więcej niż 4 odpowiedzi na takie pytania i nie może zgromadzić więcej niż 15 punktów. \n",
+    "    \n",
+    "    Przykład: a) jak działa `timeit`; b) jak przejść dwójkami (zachodzącymi na siebie lub nie) po liście"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Czyli w sumie:\n",
+    "- (50p) **Kolokwia**\n",
+    "- (35p) **Projekt**\n",
+    "- (15p) **Aktywność w czasie laboratoriów**\n",
+    "- (15p) **Aktywność w trakcie wykładu**\n",
+    "\n",
+    "uzyskujemy 115p, zatem 15p jest po to, aby ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### (Nie)Obecności \n",
-    "Obecność na laboratoriach jest obowiązkowa. Dopuszcza się trzy nieobcności, bez konieczności usprawiedliwienia. Przekroczenie tego limitu powoduje niezaliczenie przedmiotu, niezależy od liczby zdobytych punktów. \n",
+    "Obecność na laboratoriach jest obowiązkowa. Dopuszcza się dwie nieobecności, bez konieczności usprawiedliwienia. Przekroczenie tego limitu powoduje niezaliczenie przedmiotu, niezależy od liczby zdobytych punktów. \n",
     "\n",
     "Dla osób, które nie będą mogły uczestniczy, w którym kolwiek kolokwium organizowane jest dodatkowe kolokwium w terminie sesji z zagadnień zwiazanych z całym materiałem przerobionym na laboratoriach."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Egzamin\n",
+    "Odbędzie się na ostatnim wykładzie, tj. 24.01.2018 w godzinach 16.00-19.15. Może być konieczne podchodzenie \"turowe\" do egzaminu."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Stopnie\n",
+    "\n",
+    "Ocena końcowa to:\n",
+    "- ocena z ćwiczeń w przypadku zaliczenia kolokwiów jak wspomniano wyżej\n",
+    "- średnia wyniku z egzaminu (w skali 0-100%) oraz z ćwiczeń (0-100%)\n",
     "\n",
     "Zaliczenie przedmiotu wymaga uzyskania 50% maksymalnej liczby punktów. Oceny wystawiane są według skali\n",
     "\n",
@@ -94,75 +183,82 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Osoby, które zaliczą ćwiczenia, lecz w toku normalnych zajęć nie uzyskają wymaganej liczb punktów, będą pisały egzamin w sesji, w zwykłym terminie (i ewnetualnie egzamin poprawowy w sesji poprawkowej). Z egzaminu nie można uzyskać oceny wyższej niż 3.0."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Uwagi:\n",
     "1. Nie jest możliwe przepisywanie oceny na podstawie zajęć zrealizowanych na I stopniu studiów.\n",
-    "2. ..."
+    "2. Nie wyrażam zgody na rezygnację z przedmiotu ze względu na konieczność utrzymania odpowiedniej liczności w grupach."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Materiały\n",
     "\n",
     "Kurs jest oparty m.in. na:\n",
     "- http://stanfordpython.com\n",
     "- https://stanford.edu/~schmit/cme193/project.html\n",
-    "- https://github.com/gmum/python-lecture"
+    "- https://github.com/gmum/python-lecture\n",
+    "- http://workshop-python.readthedocs.io"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Podstawowe cele tego przedmiotu są dwa:\n",
+    "## Podstawowe cele tego przedmiotu to:\n",
     "\n",
-    "1. Develop skills with Python fundamentals, both old and new\n",
-    "2. Learn to recognize and write \"good\" Python\n",
-    "3. Gain experience with practical Python tasks\n",
-    "4. Understand when to choose Python (or not)"
+    "1. Rozwijanie umiętności pisania kodu w Pythonie.\n",
+    "2. Nauczenie rozpoznawania \"dobrego\" Pythona.\n",
+    "3. Podniesienie doświadczenia w rozwiązywaniu zagadnień programistycznych w Pythonie.\n",
+    "4. Zrozumienie kiedy należy a kiedy nie używać Pythona."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Tematyka\n",
     "\n",
-    "- Rozgrzewka\n",
-    "- Data structures\n",
-    "- Functions\n",
+    "- Wprowadzenie do programowania w Pythonie (rozgrzewka, data structures, functions)\n",
     "- Functional programming\n",
     "- Object-oriented Python\n",
     "- Standard library\n",
-    "- Third-party tools\n",
-    "    1.\tPillow, scikit-image – manipulacja  obrazami\n",
-    "    2.\tNumpy, Scipy – obliczenia numeryczne\n",
-    "    3.\tMatplotlib, PyGoogleChart – tworzenie wykresów\n",
-    "    4.\tScikit-learn – metody uczenia maszynowego\n",
-    "    5.\tPandas, h5py – obsługa dużych plików\n"
+    "- Cython, Jython, PyPy\n",
+    "- Third-party tools: `Pillow`, `scikit-image` – manipulacja  obrazami; `numpy`, `scipy` – obliczenia numeryczne; `matplotlib`, `PyGoogleChart` – tworzenie wykresów; `scikit-learn` – metody uczenia maszynowego; `pandas`, `h5py` – obsługa dużych plików; `django`\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
