--- a/lab01.ipynb
+++ b/lab01.ipynb
@@ -183,8 +183,8 @@
    },
    "outputs": [],
    "source": [
-    "# Funkcję zwraca listę par liczb zaprzyjaźnionych \n",
-    "# (zobacz: https://pl.wikipedia.org/wiki/Liczby_zaprzyja%C5%BAnione nie większych niż $n$\n",
+    "# Funkcję zwraca listę par liczb zaprzyjaźnionych nie większych niż n\n",
+    "# (zobacz: https://pl.wikipedia.org/wiki/Liczby_zaprzyja%C5%BAnione) \n",
     "def zaprzyjaznione(n):\n",
     "    pass\n",
     "\n",
@@ -202,13 +202,12 @@
     "Można za nie zdobyć punkty z aktywności, równiez oddając je za tydzień.\n",
     "\n",
     "Dla zadanej tablicy o długości $n$ zawierającej liczby całkowite większe od zera. \n",
-    "Chcemy znaleść potablice że $m$ kolejnych lementów sumuje się do $d$.\n",
+    "Chcemy znaleść podtablice, że $m$ kolejnych elementów sumuje się do $d$.\n",
     "\n",
-    "Mając dane $m$, $d$ i sekwencję liczb całkowitych większych od zera, na ile sposobów można stworzyć taką podtablice?\n",
+    "Napisz funkcję która dla danych $m$, $d$ i sekwencję liczb całkowitych większych od zera $tab$, wypisze na ile sposobów można stworzyć taką podtablice?\n",
     "\n",
     "Przykładowo, niech $m=2$, $d=3$, a czekolada składa się z $tab = [1,2,1,3,2]$. Chcemy znaleźć takie dwa (bo m=2) elemnty pod rząd, których suma da nam $d=3$. Jest to pierwszy i drugi kwadracik lub drugi i trzeci.\n",
     "\n",
-    "Zadaniem jest napisanie programu, który przyjmie na standardowe wejście $m$, $d$ i $tab$ a wypisze na standardowe wyjście liczbę możliwych podciągów.\n",
     "\n",
     "**Napisz program, który działa w czasie liniowym.**"
    ]
