--- a/opt01.ipynb
+++ b/opt01.ipynb
@@ -390,7 +390,7 @@
     }
    },
    "source": [
-    "## 2. Knowladge?"
+    "## 2. Knowledge?"
    ]
   },
   {
@@ -447,6 +447,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
