--- a/opt01.ipynb
+++ b/opt01.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -25,18 +25,7 @@
    "outputs": [],
    "source": [
     "# assumptions\n",
-    "N = 1_000_000\n",
-    "\n",
-    "def compare(t1, t2):\n",
-    "    v1 = sum(t1.all_runs)/len(t1.all_runs)\n",
-    "    v2 = sum(t2.all_runs)/len(t2.all_runs)\n",
-    "    \n",
-    "    v = v1/v2\n",
-    "    if v > 1:\n",
-    "        return \"The first is %.2f times faster then the second\" % v\n",
-    "    else:\n",
-    "        v = v2/v1\n",
-    "        return \"The second is %.2f times faster then the first\" % v"
+    "N = 1_000_000"
    ]
   },
   {
@@ -81,7 +70,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -93,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -104,22 +92,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "77.1 ms ± 4.43 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "55.1 ms ± 930 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<TimeitResult : 77.1 ms ± 4.43 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%timeit -n10 -o\n",
+    "%%timeit -n10\n",
     "sum = 0\n",
     "for x in range(1, N+1):\n",
     "    sum += x"
@@ -127,21 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "t1 = _"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -152,61 +116,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "250 ns ± 42.3 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "189 ns ± 44.9 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<TimeitResult : 250 ns ± 42.3 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)>"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%timeit -n10 -o\n",
+    "%%timeit -n10\n",
     "N * (1 + N) // 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "t2 = _"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The first is 307959.53 times faster the second'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "compare(t1, t2)"
    ]
   },
   {
@@ -252,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -266,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -277,22 +193,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "58 ms ± 1.33 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "41.2 ms ± 429 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<TimeitResult : 58 ms ± 1.33 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)>"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%timeit -n10 -o\n",
+    "%%timeit -n10\n",
     "size = 0\n",
     "for element in elements:\n",
     "    size += 1"
@@ -300,21 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "t1 = _"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -325,61 +217,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "293 ns ± 108 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "177 ns ± 48.1 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<TimeitResult : 293 ns ± 108 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)>"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%timeit -n10 -o\n",
+    "%%timeit -n10\n",
     "len(elements)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "t2 = _"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The first is 197825.15 times faster then the second'"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "compare(t1, t2)"
    ]
   },
   {
